--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Malagutti Nutrição</title>
+    <title>Lucas Nutrição</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -15,7 +15,7 @@
     <header>
         <div class="bg-dark text-white posicao-fixada-titulo">
             <div class="container ">
-                <h1 class="titulo">Malagutti Nutrição</h1>
+                <h1 class="titulo">Lucas Nutrição</h1>
             </div>
         </div>
     </header>
@@ -29,6 +29,7 @@
                     <label for="filtro-tabela">Filtro:</label>
                     <input id="filtro-tabela" type="text" class="form-control" placeholder="Digite o nome paciente.">
                 </div>
+                
                 <br>
                 <table class="table table-bordered">
                     <thead class="thead-light">
@@ -85,6 +86,8 @@
                         </tr>
                     </tbody>
                 </table>
+                <span id="erro-ajax" class="invisivel">Erro ao buscar os pacientes</span>
+                <button id="buscar" type="button" class="btn btn-primary btn-lg botao-adicionar">Buscar</button>
             </div>
         </section>
     </main>
@@ -127,6 +130,7 @@
     <script src="js/form.js"></script>
     <script src="js/remover.js"></script>
     <script src="js/filtro.js"></script>
+    <script src="js/buscar.js"></script>
 </body>
 
 </html>
