--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Nutrição</title>
+    <title>Nutrição</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -15,7 +15,7 @@
     <header>
         <div class="bg-dark text-white posicao-fixada-titulo">
             <div class="container ">
-                <h1 class="titulo">Lucas Nutrição</h1>
+                <h1 class="titulo">Nutrição</h1>
             </div>
         </div>
     </header>
